<resources>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="Confirm_password_hint">Confirm Password</string>
    <string name="inform_text">Start Matching so you can meet people with similar interest</string>
    <string name="say_hello">Say Hello!</string>
    <string name="matching">Matching....</string>
    <string name="matchingbtn">Matching</string>
    <string name="interest">Interest :</string>
    <string name="welcome_user">Welcome user</string>
    <string name="appLOGO">Imatch</string>
    <string name="listitemnames">Football</string>
    <string name="startbtntext">start</string>
    <string name="App_message">App to meet Peolple with Similar Interest</string>
    <string name="to">to</string>
    <string name="welcomeText">Welcome</string>
    <string name="login_username_hint">username</string>
    <string name="select_interest">Select Interest</string>
    <string name="saveText">Save</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name_hint">Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="register_btn_text">Register</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="type_message_hint">Type Message</string>
    <string name="update_btn_text">Update</string>
    <string name="log_out_text">Log Out</string>
    <string name="change_photo_text">change Photo</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="formfillingwarning">Choose Email and Username carefully will not be able to update later</string>
    <string name="update_details">Update Details</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-Type New Password</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_image">Save Image</string>
    <string name="skip">skip</string>
    <string name="message">message</string>
    <string name="colns">:</string>
    <string name="go_to_login_page">Go to Login Page</string>

</resources>
