<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ChatsBackground"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/to_color"
        android:textSize="40sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appLOGO"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/whiteTextColor"
        android:textSize="100sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App_message"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/red_color"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's Go"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:textColor="#FFEB3B"
        android:gravity="center"
        android:layout_marginBottom="20sp"
        />

</LinearLayout>