<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".Activity.Upload_Profile_Photo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            />

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/uploaded_image"
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/upload_image_btn"
            style="@style/loginButton"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/upload_image"/>

        <Button
            android:id="@+id/save_image_btn"
            style="@style/loginButton"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_image"/>


        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textSize="20sp"
            android:layout_marginEnd="20sp"
            android:layout_gravity="end"/>

    </LinearLayout>


</RelativeLayout>

