<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#03A9F4"
    tools:context=".Activity.MatchingActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_Nevigation">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AppLogo"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:fontFamily="cursive"
                android:text="@string/appLOGO"
                android:textColor="@color/whiteTextColor"
                android:textSize="60sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/AppLogo"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/showUserDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/welcome_user"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/showInterestDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:text="@string/interest"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/startMatchText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="50sp"
                    android:layout_marginRight="30sp"
                    android:gravity="center"
                    android:text="@string/inform_text"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/matched_user_profile"
                        android:layout_width="200sp"
                        android:layout_height="200sp"
                        android:visibility="gone"
                        android:src="@drawable/ic_baseline_person_24"
                        android:contentDescription="@string/todo" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/matcheduser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/matching"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/searchingProgress"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50sp"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progress_bg"
                    android:progress="0"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/SayHello"
                    style="@style/Sayhello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/say_hello"
                    android:textColor="#FFEB3B"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/StartMatchingbtn"
                    style="@style/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/matchingbtn"
                    android:textColor="@color/login_bk_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_Nevigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/nav_bar"
        app:itemBackground="@color/nav_bar"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/menu_nevigation" />

</RelativeLayout>