<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="Already \nhave an\nAccount" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_register_hero"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailLogin"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextEmialLogin"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:textSize="18sp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPasswordLogin"
                style="@style/parent"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextPasswordLogin"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:textSize="17sp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotpassword"
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10sp"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize"/>


            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login"
                app:initialCornerAngle="30sp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="5sp"
                app:spinning_bar_width="5sp" />

            <TextView
                android:id="@+id/create_new_account"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onCreateClick"
                android:text="@string/create_new_account"
                android:textAlignment="center"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10sp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/imatch" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>